--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="lib" path="lib/javax.activation-api-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb-api-2.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb-impl-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.17.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
